--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Library</title>
 </head>
 <body>
-    
+    <div class="library">
+        <div class="card">
+            <p>This is a card</p>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
