--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     <title>Library</title>
 </head>
 <body>
+    <nav>
+        <h1>THIS IS THE TOP OF THE WEBSITE</h1>
+    </nav>
     <div class="library">
         <div class="card">
             <p>This is a card</p>
         </div>
     </div>
+    
+    <footer>
+        <p>This is a footer</p>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
