--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
     <nav>
         <h1>THIS IS THE TOP OF THE WEBSITE</h1>
     </nav>
-    <div class="library">
-        <div class="card">
-            <p>This is a card</p>
+
+    <div class="library-grid">
+        <button class="display-form-button">Push Me</button>
+    </div>
+
+    <div class="form-wrapper hidden">
+        <div class="new-book-form">
+            <label for="title">Book Title: </label>
+            <input type="text" name="title" id="title">
+            <label for="title">Author: </label>
+            <input type="text" name="author" id="author">
+            <label for="title">Pages: </label>
+            <input type="text" name="pages" id="pages">
+            <button class="submit-book-btn">Add New Book</button>
         </div>
     </div>
+    
     
     <footer>
         <p>This is a footer</p>
