--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <body>
     <nav>
       <h1>THIS IS THE TOP OF THE WEBSITE</h1>
-    </nav>
+    </nav>   
 
     <div class="library-grid">
-      <button class="display-form-button">Push Me</button>
+      
     </div>
 
+    <button class="display-form-button">Push Me</button>
+    
     <div class="form-wrapper hidden">
       <div class="new-book-form">
         <div class="input-format">
@@ -29,6 +31,15 @@
         <div class="input-format">
           <label for="title">Pages: </label>
           <input type="text" name="pages" id="pages" />
+        </div>
+        <div class="input-format">
+          <fieldset>
+            <legend>Have you read this book?</legend>
+            <label for="yes">Yes </label>
+          <input type="radio" name="read" id="yes"> 
+          <label for="no"> No</label>
+          <input type="radio" name="read" id="no"> 
+          </fieldset>          
         </div>
 
         <button class="submit-book-btn">Add New Book</button>
