Redid html css and JS

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <title>Library</title>
   </head>
   <body>
- 
-    
+    <button id="newBook">New Book</button>
+
+    <div class="hidden-form hidden" id="hidden-form">
+      <h1>I'm Here Now</h1>
+    </div>
+
+    <div class="library-display"></div>
+
+
     <footer>
       <p>This is a footer</p>
     </footer>
