--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
     <button id="newBook">New Book</button>
 
     <div class="hidden-form hidden" id="hidden-form">
-      <h1>I'm Here Now</h1>
+        <form action="post" id="form">
+          <div class="form-div">
+            <label for="title">Title: </label>
+            <input type="text" id="title" name="title">
+          </div>
+          <div class="form-div">
+            <label for="author">Author: </label>
+            <input type="text" id="author" name="author">
+          </div>
+          <div class="form-div">
+            <label for="pages">Pages: </label>
+            <input type="text" id="pages" name="pages">
+          </div>
+          <div class="form-div">
+            <label for="read">Read</label>
+            <input type="checkbox" id="read" name="read" value="read">
+          </div>
+          <div id="submit-div">
+            <input type="submit" id="submit" name="submit">
+          </div>
+        </form>
     </div>
 
     <div class="library-display"></div>
